# advent-of-code-2023

./: Cargo.toml
day-0-cookie-cutter/: Cargo.toml
day-0-cookie-cutter/src/: main.rs
day-1-trebuchet/: Cargo.toml
day-1-trebuchet/input/: input.txt
day-1-trebuchet/src/: main.rs
day-10-pipes/: Cargo.toml
day-10-pipes/input/: input_readable.txt  test_2_readable.txt  test_3_readable.txt  test_4_readable.txt  test_readable.txt
day-10-pipes/src/: main.rs  tile.rs  translate.rs
day-11-galaxies/: Cargo.toml
day-11-galaxies/src/: galaxy.rs  main.rs
day-15-lens/: Cargo.toml
day-15-lens/src/: main.rs
day-2-cubes/input/: input.txt
day-2-cubes/src/: game.rs  main.rs
day-3-gears/: Cargo.toml
day-3-gears/src/: machine.rs  main.rs
day-4-scratch-cards/: Cargo.toml
day-4-scratch-cards/src/: cards.rs  main.rs
day-5-seeds/: Cargo.toml  readme.md
day-5-seeds/src/: main.rs  seeds.rs
day-6-boat-race/: Cargo.toml
day-6-boat-race/src/: main.rs
day-7-camel-card/: Cargo.toml
day-7-camel-card/src/: card.rs  main.rs
day-8-nodes/: Cargo.toml
day-8-nodes/src/: instructions.rs  main.rs  nodes.rs
day-9-oasis/: Cargo.toml
day-9-oasis/src/: main.rs  report.rs
toolkit/src/: grid.rs  input.rs
