[package]
name = "day-10-pipes"
version = "0.1.0"
edition = "2021"
default-run = "day-10-pipes"

[[bin]]
name = "day-10-pipes"
path = "src/main.rs"

[[bin]]
name = "translator"
path = "src/translate.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toolkit = { path = "../toolkit/" }
